add loading background animation in pc app.

--- a/app/src/sass/components/_loader.scss
+++ b/app/src/sass/components/_loader.scss
@@ -6,6 +6,7 @@ $ANIM_SEC: 5s;
   position: absolute;
   top: 0; left: 0;
   background-color: #000000;
+  z-index: 9999;
 
   .load-wrapper{
     position: absolute;
