update menu and actions for it.

--- a/app-sp/src/sass/components/_main.scss
+++ b/app-sp/src/sass/components/_main.scss
@@ -14,10 +14,10 @@
 }
 
   #app {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
-    overflow: hidden;
+    //overflow: hidden;
     @extend %full-size;
   }
 
@@ -43,6 +43,7 @@
       .content-wrapper{
         @extend %full-size;
         position: absolute;
+        //position: relative;
         backface-visibility: hidden;
         transform-style: preserve-3d;
         transform: translate3d(0,0,0);
@@ -50,6 +51,7 @@
 
         .menu &{
           box-shadow: 0 0 40px rgba(0,0,0,0.4);
+          overflow: hidden;
         }
 
         &.selected{
@@ -79,6 +81,7 @@
         .content-container{
           @extend %full-size;
           position: absolute;
+          //position: relative;
           background: #ffffff;
           backface-visibility: hidden;
           transform: translate3d(0,0,0);
