--- a/app-sp/src/sass/main.scss
+++ b/app-sp/src/sass/main.scss
@@ -13,3 +13,7 @@
 @import "components/loader";
 @import "components/works";
 @import "components/close-button";
+@import "components/share";
+@import "components/link_text";
+@import "components/about-content";
+@import "components/bottom-content";
