--- a/app-sp/src/sass/components/_works.scss
+++ b/app-sp/src/sass/components/_works.scss
@@ -27,9 +27,10 @@
     //width: 100%;
 
     color: #000000;
-    height: 70px;
+    height: 50px;
     vertical-align: middle;
-    line-height: 70px;
+    line-height: 50px;
+    margin-top: 20px;
     font-size: 20px;
     letter-spacing: 1px;
     position: relative;
@@ -56,7 +57,7 @@
     .work-cover{
       @include performance();
       position: absolute;
-      top: 25px; left: 0;
+      top: 12px; left: 0;
       width: 0;
       overflow: hidden;
       height: 25px;
