--- a/app/src/sass/main.scss
+++ b/app/src/sass/main.scss
@@ -3,6 +3,7 @@
 @import "utils/extends/extends";
 @import "utils/error";
 @import "utils/easing";
+@import "utils/mixin";
 
 @import "base/constants";
 @import "base/font";
