--- a/app/src/sass/components/_footer.scss
+++ b/app/src/sass/components/_footer.scss
@@ -9,6 +9,10 @@
   padding-left: 30px;
   padding-right: 30px;
 
+  -webkit-user-select: none;  /* Chrome all / Safari all */
+  -moz-user-select: none;     /* Firefox all */
+  -ms-user-select: none;
+
   .title {
     float: left;
     position: relative;
