--- a/app-sp/src/sass/components/_main.scss
+++ b/app-sp/src/sass/components/_main.scss
@@ -55,8 +55,7 @@
         display: none;
 
         .menu &{
-          //box-shadow: 0 0 40px rgba(0,0,0,0.4);
-          border-top: 1px solid #AAAAAA;
+          box-shadow: 0 0 20px rgba(0,0,0,0.3);
           overflow: hidden;
         }
 
